# RFOS-C

./: .gitignore  CMakeLists.txt  README.md  makefile  sync.sh
boot/: boot.s  linker.ld
drivers/: cursor.c  fs.c  keyboard.c
drivers/include/: cursor.h  fs.h  keyboard.h
isodir/boot/grub/: grub.cfg  menu.lst
kernel/: kernel.c  shell.c
kernel/include/: kernel.h  shell.h
lib/: gdt.c  helper.c  idt.c  idt.s  inter-s.s  irq.c  isr.c  isr.s  keyboard.c  liballoc.c  paging.c  paging.s  pic.c  switch.s  tasks.c  termfunc.c
lib/include/: gdt.h  helper.h  idt.h  irq.h  isr.h  liballoc.h  paging.h  pic.h  tasks.h  termfunc.h
lib/libc/include/: string.h
lib/libc/stdlib/: abort.c
libc/include/: atoi.h  stdio.h  stdlib.h  string.h
libc/stdio/: printf.c  puts.c
libc/stdlib/: atoi.c
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strcmp.c  strcpy.c  strlen.c
